--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "engines": {
     "vscode": "^1.63.0"
   },
+  "license": "MIT",
+  "publisher": "beanio",
   "categories": ["Other"],
   "activationEvents": ["onView:beanio", "onCommand:beanio.file-ram"],
   "main": "./extension.js",
@@ -54,7 +56,7 @@
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "14.x",
-    "@types/vscode": "^1.67.0",
+    "@types/vscode": "^1.63.0",
     "@vscode/test-electron": "^2.1.3",
     "eslint": "^8.14.0",
     "glob": "^8.0.1",
