--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "beanio-vscode",
   "displayName": "beanio",
   "description": "beanio tooling for VS Code",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "engines": {
     "vscode": "^1.63.0"
   },
@@ -74,6 +74,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.17.10",
+    "axios": "^0.27.2",
     "serialport": "^10.4.0"
   }
 }
